2009-07-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp: Fix warning.

2009-07-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* src.mdp: Updated.

2009-07-03  Larry Ewing  <lewing@novell.com>

	* textblock.cpp (ArrangeOverride): try to get textblock height
	stretching closer.  See 295 and 2020 for examples.

2009-07-03  Alan McGovern  <amcgovern@novell.com>

	* runtime.cpp: We don't need to change these actually.

2009-07-03  Alan McGovern  <amcgovern@novell.com>

	* runtime.cpp: When inside the if statement, we know that
	  toplevel and element are the same, so use 'element' instead
	  of 'toplevel' in case the toplevel is removed during the
	  loaded/resized event. Fixes memorabilia.

2009-07-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mms-downloader.cpp: ProcessResponseHeaderCallback:
	set current deployment.

2009-07-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-asf.cpp|h:
	* mms-downloader.cpp|h: If downloading the mms url
	doesn't succeed, raise an error. Fixes MS DRT #222
	completely.

2009-07-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-asf.cpp:
	* mediaelement.cpp: When playing an mms stream, SL sets
	DownloadProgress to 1.0 after downloading the header.
	Makes MS DRT #222 reach a bit further.

2009-07-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: Fix printf.

2009-07-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp: Handle DownloadProgressChanged events
	properly.

2009-07-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* downloader.cpp|h: Add another downloader API
	method, this time to get the DownloaderResponse.

	* cbinding.cpp|h: Regenerated.

2009-07-02  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.h: instruct the generator to do more for us.

2009-07-02  Chris Toshok  <toshok@ximian.com>

	* propertypath.h: fix operator== and add operator!=.

	* validators.h|cpp: add StoryboardTargetPropertyValidator.

	* dependencyproperty.g.cpp: regen.
