@@ -50,12 +50,6 @@ public:
 		EndMarker	= 1 << 17,
 		Param		= 1 << 18,
 		Event		= 1 << 19,
-		/* SMIL playlists */
-		Smil		= 1 << 20,
-		Switch		= 1 << 21,
-		Media		= 1 << 22,
-		Excl		= 1 << 23,
-		Seq		= 1 << 24,
 	};
 	
 public:
@@ -92,9 +86,6 @@ private:
 	bool client_skip;
 	TimeSpan start_time;
 	Duration *duration;
-	Duration *repeat_duration;
-	int repeat_count;
-	char *role;
 
 	PlaylistKind::Kind set_values;
 	
@@ -157,21 +148,7 @@ public:
 	void SetDuration (Duration *duration);
 	bool HasDuration () { return (set_values & PlaylistKind::Duration); }
 	bool HasInheritedDuration ();
-
-	Duration *GetRepeatDuration ();
-	void SetRepeatDuration (Duration *duration);
-	// FIXME these are attributes from smil not nodes
-	// bool HasRepeatDuration () { return (set_values & PlaylistNode::RepeatDuration); }
-
-	int GetRepeatCount () { return repeat_count; }
-	void SetRepeatCount (int count) { repeat_count = count; }
-	// FIXME these are attributes from smil not nodes
-	// bool HasRepeatCount () { return (set_values & PlaylistNode::RepeatDuration); }
-
-
-	void SetRole (const char *value) { role = g_strdup (role); }
-	char *GetRole (void) { return role; }
-
+	
 	const char *GetInfoTarget ();
 	void SetInfoTarget (char *info_target);
 
@@ -233,8 +210,6 @@ private:
 	PlaylistNode *current_node;
 	IMediaSource *source;
 	bool is_single_file;
-	bool is_sequential;
-	bool is_switch;
 	bool waiting;
 	bool opened;
 
@@ -271,10 +246,6 @@ public:
 
 	virtual bool IsPlaylist () { return true; }
 	virtual bool IsSingleFile () { return is_single_file; }
-	void SetSequential (bool value) { is_sequential = value; }
-	bool GetSequential (void) { return is_sequential; }
-	void SetSwitch (bool value) { is_switch = value; }
-	bool GetSwitch (void) { return is_switch; }
 	void SetWaiting (bool value) { waiting = value; }
 	bool GetWaiting (void) { return waiting; }
 
@@ -360,7 +331,6 @@ private:
 	enum XmlType {
 		XML_TYPE_NONE,
 		XML_TYPE_ASX3,
-		XML_TYPE_SMIL
 	};
 
 
@@ -383,17 +353,9 @@ private:
 	void OnASXEndElement (const char *name);
 	void OnASXText (const char *text, int len);
 
-	void GetSMILCommonAttrs (PlaylistEntry *entry, const char *name, const char **attrs);
-
-	void OnSMILStartElement (const char *name, const char **attrs);
-	void OnSMILEndElement (const char *name);
-
 	static void on_asx_start_element (gpointer user_data, const char *name, const char **attrs);
 	static void on_asx_end_element (gpointer user_data, const char *name);
 	static void on_asx_text (gpointer user_data, const char *text, int len);
-
-	static void on_smil_start_element (gpointer user_data, const char *name, const char **attrs);
-	static void on_smil_end_element (gpointer user_data, const char *name);
 
 	void EndEntry ();
 	PlaylistEntry *GetCurrentEntry ();
@@ -420,10 +382,8 @@ public:
 	MediaResult Parse ();
 	bool ParseASX2 ();
 	bool ParseASX3 ();
-	bool ParseSMIL ();
 	bool IsASX2 (IMediaSource *source);
 	bool IsASX3 (IMediaSource *source);
-	bool IsSMIL (IMediaSource *source);
 
 	// This value determines if the data we parsed
 	// actually was a playlist. It may be true even
