@@ -1,5 +1,11 @@
 2009-07-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* playlist.cpp|h: Remove wsx/smil parsing, it's a server side
+	playlist format so we'll never get it, it'll be parsed on the
+	media server.
+
+2009-07-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* mediaelement.cpp: Fix warning.
 
 2009-07-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>
